Finalisation du puissance 4 sur Terminal